Wed Apr 20 23:22:39 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* Makefile.in, common.mk: miniruby depens on MINIOBJS.

	* dmydln.c (dln_load): dummy function to raise LoadError.

	* cygwin/GNUmakefile.in, {bcc32,win32,wince}/Makefile.sub: miniruby
	  can't load extensions on Windows.

Wed Apr 20 23:01:35 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* win32/ifchange.bat: delete testing files.

Wed Apr 20 22:54:54 2005  Minero Aoki  <aamine@loveruby.net>

	* lib/net/http.rb: new method Net::HTTP.post_form.

	* lib/net/http.rb: new method Net::HTTPHeader#set_form_data and
	  its alias #form_data=.

	* lib/net/http.rb: Net::HTTPHeader#add_header -> add_field
	  (adjustted to Ruby 1.8).

Wed Apr 20 10:53:30 2005  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/rdoc/parsers/parse_rb.rb (lex_init): use IRB module.
	  [ruby-core:04737]

Wed Apr 20 07:27:18 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* {bcc32,win32,wince}/configure.bat, {bcc32,win32,wince}/setup.mak:
	  add extout option.

	* bcc32/setup.mak: make configuration variables overridable.

Tue Apr 19 23:37:09 2005  WATANABE Hirofumi  <eban@ruby-lang.org>

	* lib/ftools.rb (File.safe_unlink): do not modify a symlinked file.

Tue Apr 19 23:02:40 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (search_required): deal with features with path too.

	* intern.h (rb_file_expand_path): prototype.  fixed: [ruby-dev:26082]

Tue Apr 19 08:38:07 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* eval.c (search_required, rb_require_safe): expand path in
	  rb_features.  [ruby-dev:26079]

	* file.c (rb_find_file_ext): return absolute path.

	* ext/extmk.rb: expand path for ext/**/extconf.rb.

	* eval.c (search_required): handle static linked extensions.

Mon Apr 18 15:37:35 2005  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (rb_attr): attribute name check added.

	* numeric.c (flo_plus): small typo fix.

Mon Apr 18 11:25:14 2005  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>
