@@ -1,3 +1,13 @@
+Thu Apr 21 00:07:50 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* lib/mkmf.rb (create_makefile): support platforms have file separator
+	  other than /.
+
+	* {bcc32,win32,wince}/Makefile.sub (BUILD_FILE_SEPARATOR): separator
+	  of building platform.
+
+	* {bcc32,win32,wince}/Makefile.sub (CP, INSTALL): use COPY command.
+
 Wed Apr 20 23:22:39 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* Makefile.in, common.mk: miniruby depens on MINIOBJS.
